--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 h5py>=2.10.0
 matplotlib>=3.3.1
 matplotlib-venn==0.11.6
-numpy==1.23.5
+#numpy==1.23.4
+numpy==1.24.3
 pandas>=1.3.4
 pyfaidx==0.6.1
 scikit-learn>=1.1.2
@@ -9,9 +10,11 @@ scipy>=1.4.1
 tensorflow==2.8.0 
 tensorflow-estimator==2.8.0 
 tensorflow-probability==0.15.0
-protobuf==3.20
+#protobuf==3.20
+protobuf==3.20.3
 tqdm==4.48.2
-deepdish==0.3.7
+#deepdish==0.3.7
+deepdish==0.3.4
 deeplift==0.6.13.0
 modisco==0.5.16.0
 modisco-lite==2.0.7
